# nonstop-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: ARCHITECTURE.md  LINKEDIN_POSTS.md  QUICKSTART.md
examples/: basic_usage.py  custom_security.py  existing_project.py
skill/: SKILL.md
skill/templates/python/: client.py  main.py  prompts.py  requirements.txt  security.py
skill/templates/python/prompts/: app_spec.txt
skills/: ARCHITECTURE.md
skills/templates/python/: agent.py  progress.py
skills/templates/python/prompts/: coding_prompt.md  existing_project_prompt.md  initializer_prompt.md
src/nonstop_agent/: __init__.py  agent.py  client.py  main.py  security.py
src/nonstop_agent/prompts/: app_spec.txt  coding_prompt.md
tests/: conftest.py  test_imports.py
